# Final-Project

./: Dockerfile  celery_app.py  deployement.yaml  docker-compose.yml  main.py  pokemon.db  pyproject.toml  script.sh  service.yaml  tasks.py
Tests/: conftest.py  test_nauth.py  test_pokemon.py  test_wauth.py
logstash/: logstash.conf
